Fix mega menu centering and Center Modal arrow indicators.
Replace fragile inline left offsets with CSS custom property centering so panels stay aligned under their trigger across all horizontal headers, and resolve center-layout overrides that forced dropdowns off-screen and broke hover line indicators.

--- a/templates/shaper_helixultimate/scss/menu.scss
+++ b/templates/shaper_helixultimate/scss/menu.scss
@@ -337,7 +337,8 @@ body {
         }
 
         &.sp-menu-center {
-          margin-left: 45px;
+          left: 50%;
+          margin-left: calc(var(--mega-width, 0px) / -2);
         }
 
         &.sp-dropdown-main {
